--- a/index1.html
+++ b/index1.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
+	<script data-ad-client="ca-pub-0601833367696437" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163919368-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163919368-1');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Animal Face Test</title>
-    <meta name="title" content="한국의 야생화">
-    <meta name="subject" content="얼굴로 보는 인공지능 동물상 테스트, 나와 닮은 동물상을 찾아보세요!">
-    <meta name="keywords" content="한국의 야생화">
+    <meta name="title" content="Animal Face Test">
+    <meta name="subject" content="What animal do you look like?">
+    <meta name="keywords" content="Animal test, artificial intelligence animal test, face test, face test, animal that resembles me, find fauna, face looking animals, face animals, animal faces, animalface, puppy, cat, fox, deer, rabbit Statue, bear image, dinosaur image, AI fauna, AI face image, AI animal상">
     <meta name="author" content="komallone">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://nowkorea.com" />
-    <meta property="og:url" content="https://nowkorea.com" />
+    <link rel="canonical" href="https://animalface.me" />
+    <meta property="og:url" content="https://animalface.me" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="한국의 야생화" />
-    <meta property="og:description" content="야생화 사진 데이터로 학습한 인공지능이 야생화의 이름과 설명을 찾아드립니다." />
+    <meta property="og:title" content="Animal Face Test" />
+    <meta property="og:description" content="Artificial intelligence fauna test with your face, find a fauna that resembles me! Artificial intelligence learned from representative animal celebrity photo data will find fauna and features with my face. Please check directly from the screen without registering! No picture data is transmitted anywhere. Take a test of my fauna that AI sees! Puppy statue? Cat statue? Fox statue? Deer statue? Rabbit statue? Bear statue? Dinosaur statue? Face testing allows you to find animals that resemble you."
+    />
     <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2Fc0eq42%2FbtqCQpiFhFn%2F8KPaOP9q8PXpJFRL7if55K%2Fimg.jpg" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e99cb8bc83c3d3d"></script>  
 
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
+	
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145482737-6"></script>
     <script>
@@ -34,101 +49,30 @@
         gtag('js', new Date());
         gtag('config', 'UA-145482737-6');
     </script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>Animal Face Test</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet" />
-    <!-- FONT AWESOME CSS -->
-    <link href="assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- ANIMATION STYLES -->
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <!-- GOOGLE FONT -->
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
 </head>
 
 <body>
-
-    <div id="home-sec">
-
-        <div id="carousel-example" class="carousel slide" data-ride="carousel">
-
-            <div class="carousel-inner">
-                <div class="item active ">
-
-                    <img src="assets/img/1.jpg" alt="" />
-                    <div class="carousel-caption">
-                        <h1 class="slide-h1 wow bounceInDown" data-wow-duration="1s">Animal Face Test</h1>
-                        <h2 class="slide-h2 wow bounceInLeft" data-wow-duration="2s" data-wow-delay="1s">Just Try and Have Fun! </h2>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="assets/img/1.jpg" alt="" />
-                    <div class="carousel-caption">
-                        <h1 class="slide-h1 wow bounceInDown" data-wow-duration="2s">Animal Face Test</h1>
-                        <h2 class="slide-h2 wow bounceInLeft" data-wow-duration="2s" data-wow-delay="1s">Just Try and Have Fun!</h2>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="assets/img/1.jpg" alt="" />
-                    <div class="carousel-caption">
-                        <h1 class="slide-h1 wow bounceInDown" data-wow-duration="2s">Animal Face Test </h1>
-                        <h2 class="slide-h2 wow bounceInLeft" data-wow-duration="2s" data-wow-delay="1s">Just Try and Have Fun!</h2>
-                    </div>
-                </div>
-            </div>
-            <!--INDICATORS-->
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example" data-slide-to="1"></li>
-                <li data-target="#carousel-example" data-slide-to="2"></li>
-            </ol>
-
+    <nav class="p-3 container navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="https://animalface.me">Animal Face</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item active" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});">
+                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">iOS App</a>
+                </li>
+				 <li class="nav-item active" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});">
+                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">Android App</a>
+                </li>
+            </ul>
         </div>
-    </div>
-    <!-- HOME SECTION END-->
- <!--   <div id="nav">
-        <ul class="list-unstyled">
-              <li>
-                <a data-toggle="tooltip" data-placement="left" title="홈" href="index.html">홈</a>
-            </li>
-            <li>
-                <a data-toggle="tooltip" data-placement="left" title="야생화" href="flower.html">야생화</a>
-            </li>
-            <li>
-                <a data-toggle="tooltip" data-placement="left" title="약초" href="medicine.html">약초</a>
-            </li>
-            <li>
-                <a data-toggle="tooltip" data-placement="left" title="버섯" href="mushroom.html">버섯</a>
-            </li>
-
-            <li>
-                <a data-toggle="tooltip" data-placement="left" title="연락처" href="#contact-sec">연락처</a>
-            </li>
-        </ul>
-    </div>
-    <!-- NAV SECTION END-->
-    <section id="about-sec">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-12">
-                    <h1 data-scroll-reveal="enter from the bottom after 0.1s">Animal Face Test</h1>
-                    <p data-scroll-reveal="enter from the bottom after 0.3s">
-                        <!--우리 주변의 작은 것들을 알아보자 </p> -->
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- ABOUT SECTION END-->
-   
+    </nav>
     <section class="section">
         <h1 class="title">What animal do you look like?</h1>
         <h2 class="subtitle">Just Try and Have Fun!!</h2>
@@ -496,131 +440,30 @@
                   kakao[i].style.display="none";
               }
             }
-            document.getElementById("yotube-top-li
-
-    <!-- FEATURE SECTION END-->
-    <!--
-   <section id="team-sec">
-        <div class="container">
-            <div class="row pad-btm">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-12">
-                    <h1 data-scroll-reveal="enter from the bottom after 0.1s">TEAM </h1>
-                    <p data-scroll-reveal="enter from the bottom after 0.3s">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                  Mauris sagittis felis dolor, id gravida tellus tempor vitae. In efficitur ipsum non faucibus tempus.
-                    </p>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-lg-2 col-md-2 col-sm-2  col-xs-12 " data-scroll-reveal="enter from the bottom after 0.4s">
-                    <img src="assets/img/1t.jpg" class="img-circle img-responsive set-img" />
-
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4  col-xs-12 " data-scroll-reveal="enter from the bottom after 0.5s">
-                    <h2>SUSAN KIM</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                          Lorem ipsum dolor sit amet.
-                    </p>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2  col-xs-12 " data-scroll-reveal="enter from the bottom after 0.6s">
-                    <img src="assets/img/2t.jpg" class="img-circle img-responsive set-img" />
-
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4  col-xs-12 " data-scroll-reveal="enter from the bottom after 0.7s">
-                    <h2>JHON MARK JEGAL</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                           Lorem ipsum dolor sit amet.
-                    </p>
-                </div>
-            </div>
-
-        </div>
-
-    </section>-->
-    <!-- TEAM SECTION END-->
-    <!--  <section id="contact-sec">
-        <div class="container">
-            <div class="row pad-btm">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-12">
-                    <h1 data-scroll-reveal="enter from the bottom after 0.1s">연락처</h1>
-                    <p data-scroll-reveal="enter from the bottom after 0.3s">
-                 <!--       Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                  Mauris sagittis felis dolor, id gravida tellus tempor vitae. In efficitur ipsum non faucibus tempus. 
-                    </p>
-                </div>
-
-            </div>
-            <div class="row pad-btm">
-
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  " data-scroll-reveal="enter from the bottom after 0.5s">
-                    <h2>주소</h2>
-                    <p>
-                        서울특별시 중구 청계천로 40             <br />
-                    <h2>전화번호</h2>
-                    <p>
-                        02-3810-3013          <br />
-                    </p>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2  col-xs-12 " data-scroll-reveal="enter from the bottom after 0.6s">
-                    <img src="assets/img/1t.jpg" class="img-circle img-responsive cnt-img" />
-
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4  col-xs-12 " data-scroll-reveal="enter from the bottom after 0.6s">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                          Lorem ipsum dolor sit amet.
-                    </p>
-                    <div class="form-group">
-                        <input type="text" class="form-control" />
-                        <br />
-                        <a href="#" class="btn btn-primary">SUBSCRIBE FOR UPDATES</a>
-                    </div>
-                </div>
-
-            </div>
-            
-                 </div>
-
-    </section> 
-    <!-- CONTACT SECTION END-->
-
-    <div id="footer-sec">
-        <a href=https://nowkorea.coml>
-            &nbsp;2020 NowKorea.com |
-            <a href="http://nowkorea.com" style="font-size: 14px; color: #fff" target="_blank">Inspired by : Jocoding</a>
-            <!-- NAV SECTION END-->
-
-            <!-- FOOTER SECTION END-->
-            <!--CORE SCRIPTS-->
-            <script src="assets/js/jquery-1.11.1.js"></script>
-            <!--BOOTSTRAP SCRIPTS-->
-            <script src="assets/js/bootstrap.js"></script>
-            <!--WOW SCRIPTS-->
-            <script src="assets/js/wow.js"></script>
-            <!--SCROLL SCRIPTS-->
-            <script src="assets/js/jquery.smooth-scroll.min.js"></script>
-            <!--SCROLL ANIMATION SCRIPTS-->
-            <script src="assets/js/scrollReveal.js"></script>
-            <!--CUSTOM SCRIPTS-->
-            <script src="assets/js/custom.js"></script>
-
-            <body>
-            </body>
-            <!-- 
+            document.getElementById("yotube-top-link").style.display="none";
+            document.getElementById("yotube-mid-link").style.display="none";
+            document.getElementById("yotube-bottom-link").style.display="none";
+        }
+    </script>
+</body>
+<!-- 
 image input box
 Copyright (c) 2020 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
+
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
 gender toggle
 Copyright (c) 2020 by Mert Cukuren (https://codepen.io/knyttneve/pen/bPpEZY)
+
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->
-            <html>
 
-            </html>
+</html>
